Support for printing out call hierarchy into the log (missing compiler option to activate) Reads and writes of short arrays implemented via select Fixed #281: Loop Hoisting optimization incorrectly processing assignments to global variables Fixed #279: Data Flow optimization incorrectly eliminating writes to global variables